2008-12-14  Adam Dingle  <adam@medovina.org>

	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/sourceview/sourceview.c (find_open_bracket),
	(find_close_bracket), (iselect_block):
	fixed #563490 – Select Code Block command selects nothing in GtkSourceView editor

2008-12-14  Johannes Schmid <jhs@gnome.org>

	Patch from Yuriy Penkin <yuriy.penkin@gmail.com>:
	* plugins/sourceview/sourceview-io.c (on_save_finished):
	#559806 – Anjuta crashes when closing unsaved file

2008-12-14  Adam Dingle  <adam@medovina.org>

	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/document-manager/plugin.c (update_status):
	Fixed #563988 – don't display zoom factor when using GtkSourceView editor
	* plugins/build-basic-autotools/plugin.c (on_build_terminated),
	plugins/tools/execute.c (atp_output_context_print_result):
	#564295 - minor English fix

	* plugins/document-manager/search-box.c (search_box_init),
	plugins/search/anjuta-search.glade,
	plugins/search/plugin.c (find_incremental),
	plugins/search/search-replace.c (search_replace_populate),
	(search_update_dialog), (search_replace_find_usage),
	plugins/search/search-replace.h,
	plugins/search/search-replace_backend.c (get_next_match),
	plugins/search/search-replace_backend.h,
	plugins/search/search_preferences.c
	(search_preferences_read_setting),
	(search_preferences_setting_by_default),
	(search_preferences_save_setting):
	fixed #563500 – inconsistent case sensitivity defaults
 
2008-12-14  Yuriy Penkin <yuriy.penkin@gmail.com>

	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/document-manager/anjuta-docman.c:
	Fix #564377: Avoid opening an empty buffer when file does not exist

2008-12-14  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/git/anjuta-git.glade:
	Add comments for issues of bug #549374

	* po/POTFILES.in:
	Add two missing files in translation list

2008-12-13  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (gtree_compare_func),